feat: expose fixtech prices
